k8s/service-1-deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: service1-deployment
  labels:
    app: service-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-1 

  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
      - name: service-1
        image: keshav1511/service1:v2
        ports:
        - containerPort: 8000
