k8s/service-1-service.yaml
apiVersion: v1

kind: Service
metadata:
  name: service1-service
  labels:
    app: service-1
spec:
  type: ClusterIP
  selector:
      app: service-1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
