k8s/service-2-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: service2-service
  labels:
    app: service2
spec:
  type: ClusterIP
  selector:
    app: service2
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
