k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress

spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service1-service
            port:
              number: 8000  
      
      - path : /service2
        pathType: Prefix
        backend:
          service:
            name: service2-service
            port:
              number: 8001
